--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
-	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
+	"id": "obsidian-highlight",
+	"name": "Obsidian Highlight",
+	"version": "0.0.1",
+	"minAppVersion": "0.0.1",
+	"description": "Obsidian Highlight provides an easy and convenient way to highlight text in your notes.",
 	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
+	"authorUrl": "https://github.com/iiTONELOC",
 	"fundingUrl": "https://obsidian.md/pricing",
 	"isDesktopOnly": false
 }
